z-index fix, product alignment fix

--- a/src/Components/CartComponent.css
+++ b/src/Components/CartComponent.css
@@ -33,8 +33,7 @@
     padding: 20px;
 }
 #productContainer .product {
-    min-width: 200px;
-    
+    width: 230px;
     padding: 10px 10px 10px 10px;
     border: 1px solid #bdbcbc;
     border-radius: 12px;
@@ -59,8 +58,6 @@
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    padding: 5px 2px 5px 2px;
-    width: 190px;
     height: 30px;
     border-radius: 20px;
     background-color: #eee9da;
