--- a/src/Components/NavbarStyle.css
+++ b/src/Components/NavbarStyle.css
@@ -21,7 +21,7 @@
     margin-top: 8px;
     margin-bottom: 10px;
     font-size: 15px;
-
+    
 }
     .cartIcon{
         display: flex;
@@ -77,6 +77,7 @@
         right: 0;
         /*position of hamburger from tight*/
         padding-right: 20px;
+        z-index: 20;
     } 
     #navbar.active{
         right: 0px;
