--- a/src/Components/ProductListing.css
+++ b/src/Components/ProductListing.css
@@ -2,12 +2,10 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 0 80px 10px 80px;
+    padding: 0;
 }
 .ab {
     display: flex; 
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 20%;
-    height: 10%;
 }
